--- a/wiki/howto.wiki
+++ b/wiki/howto.wiki
@@ -6,5 +6,5 @@
   # Install [http://www.eclipse.org/windowbuilder/download.php Window Builder] within eclipse
   # Install postgres
   # create a database called `openreg` 
-  # Set the correct database connection url inside `resources/dbconfig.txt`
+  # Set the correct test-database connection url inside `resources/dbconfig.txt`
   # Remove `swt-4.2.1-win32-win32-x86_64.jar` from your buildpath and add from `lib/` the corresponding swt library
